maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:3: error: not found: value grandNord
  var nord=grandNord()
           ^PledgeMaze:23: error: type mismatch;
 found   : Unit
 required: Int
def sommeAngle(x:Int,y:Int):Int={
                                ^