maze.pledge.PledgeMaze.scala.code
override def run() {
  var nord=grandNord()
  while (!estSurBiscuit()){
    
  }
  prendBiscuit()
}

def keepHandOnSideWall():Boolean={
  gauche()
  if (estFaceMur()){
    droite()
    return true;
  }else{
    droite()
    return false;
  }
}



def sommeAngle(x:Int,y:Int):Int={
  
}

def isDirectionFree(dir:Direction):Boolean={
  var posInitiale=getDirection()
  setDirection(dir)
  if (!estFaceMur){
    setDirection(posInitiale)
    return true
  }
  setDirection(posInitiale)
  return false
}